# fairdm

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  GITHUB-SETUP-GUIDE.md  README.md  SUGGESTED_SPECS.md  TEST_FAILURE_ANALYSIS.md  audit-baseline.json  docker-compose.yml  fairdm.code-workspace  feature-tracking.yaml  martor.bootstrap5.js  package-lock.json  package.json  pyproject.bak.toml  pyproject.toml  specifications-fairdm.md  stack.development.env  tasks.py
.githooks/: pre-push  pre-push.ps1
.github/: TODO-future-testing-skills.md  dependabot.yml  release-changelog-config.json
.github/agents/: copilot-instructions.md  speckit.tasks.agent.md
.github/scripts/: check-external-links.py  check-internal-links.py  generate-validation-report.py
.github/workflows/: ci.yml  dependabot-auto-merge.yml  docs-validation.yml  docs.yml  feature-tracking.yml  publish-pypi.yml  quality.yml  release.yml  security.yml  validate-codecov-config.yml
.specify/extensions/: .registry
.specify/memory/: constitution.md
.specify/templates/: feature-docs-checklist.md  tasks-template.md
assets/src/: project.js
assets/webpack/: common.config.js
compose/django/: Dockerfile
config/: settings.py
docs/: conf.py  features.md  index.md  introduction.md  refs.bib  requirements.txt  temp.md  vision.md  xfeatures.md
docs/_static/: home-page.css
docs/_templates/: index.html  index_example.html
docs/about/: background.md  data_model.md  features.md  goals.md  index.md  introduction.md  tech_stack.md
docs/admin-guide/: adjusting_dataset_access.md  conf.py  index.md  reviewing_content.md
docs/contributing/: FEATURE_TRACKING.md  base-views.md  before_you_start.md  django_dev.md  documentation-standards.md  feature-documentation.md  getting_started.md  index.md  registry-system.md  views_module.md
docs/contributor-guide/: before_you_start.md  code_of_conduct.md  core_data_model.md  getting_started.md  index.md  metadata_practices.md  plugin_system_architecture.md
docs/data_models/: index.md  samples.md
docs/developer-guide/: before_you_begin.md  committing_to_github.md  configuration.md  controlled_vocabularies.md  create_a_plugin.md  defining_models.md  documentation.md  emails.md  home_page.md  index.md  model_configuration.md  production.md  project_directory.md  quality_control.md  setting_up.md  special_fields.md  theme-migration.md  theme.md  using_the_registry.md
docs/more/: authors.md  changelog.md  configuration.md  glossary.md
docs/overview/: background.md  configuration-over-code.md  contributors.md  data_model.md  domain-driven-modeling.md  fair-by-design.md  features.md  goals.md  index.md  introduction.md  opinionated-defaults.md  quality-and-sustainability.md  tech_stack.md
docs/portal-administration/: about.md  configuration-checks.md  index.md  managing-measurements.md  managing-samples.md  managing-unclaimed-profiles.md  managing_contributors.md  managing_projects.md  managing_users_and_permissions.md  roles.md
docs/portal-development/: contributors.md  create_a_plugin.md  defining_models.md  documentation.md  faq.md  filtering-by-vocabulary.md  getting_started.md  home_page.md  index.md  measurements.md  model_configuration.md  production.md  profile-claiming-api.md  restful-api.md  testing-portal-projects.md  using_the_registry.md
docs/user-guide/: claiming-a-profile.md  core_data_model.md  getting_started.md  index.md  metadata_practices.md
fairdm/: __init__.py  apps.py  config.py  factories.py  imports.py  layouts.py  menus.py  metadata.py  plugins copy 2.py  plugins copy.py  plugins.py  registry.py  urls.py  views.py
fairdm/api/: __init__.py  apps.py  filters.py  pagination.py  permissions.py  router.py  serializers.py  settings.py  urls.py  viewsets.py
fairdm/conf/: __init__.py  addons.py  checks.py  dev_overrides.py  development.py  environment.py  setup.py  staging.py  urls.py  webpack-stats.prod.json
fairdm/contrib/: __init__.py
fairdm/core/: abstract.py  admin.py  apps.py  base.py  choices.py  factories.py  filters.py  forms.py  image_utils.py  models.py  plugins.py  tables.py  urls.py  utils.py  views.py  vocabularies.py
fairdm/db/: fields.py  models.py
fairdm/factories/: __init__.py  contributors.py  core.py  utils.py
fairdm/fixtures/: django-waffle.json  groups.json
fairdm/forms/: __init__.py  base.py  fields.py
fairdm/menus/: __init__.py  menus.py  renderers.py  utils.py
fairdm/registry/: __init__.py  checks.py  components.py  config.py  exceptions.py  factories.py  field_resolver.py  registry.py
fairdm/static/: _adminlte_variables.scss
fairdm/templates/: 400.html  403.html  404.html  500.html  base.html  detail_view.html  info-item.html  list_view.html
fairdm/templatetags/: fairdm.py
fairdm/utils/: __init__.py  apps.py  choices.py  context_processors.py  docs.py  factories.py  filters.py  inspection.py  models.py  permissions.py  urls.py  utils.py  view_mixins.py  views.py
fairdm/views/: __init__.py  base.py  generic.py  mixins.py
fairdm_demo/: README.md  admin.py  apps.py  config.py  factories.py  filters.py  forms.py  models.py  options.py  plugins.py  tables.py
fairdm_demo/migrations/: 0001_initial.py  0002_alter_customparentsample_options.py  0002_icp_ms_measurement_rocksample_soilsample_watersample_and_more.py
fairdm_demo/tests/: __init__.py  test_admin_views.py  test_api_smoke.py  test_contributors.py  test_registry_api.py
scripts/: dev-setup.sh  feature_tracker.py  generate_feature_dashboard.py
specs/001-documentation-baseline/: plan.md  research.md  spec.md  tasks.md
specs/001-documentation-strategy/: BLOCKER-django-environment.md  IMPLEMENTATION_SUMMARY.md  PHASE1-2-COMPLETE.md  PHASE3-COMPLETE.md  PHASE4-COMPLETE.md  PHASE5-COMPLETE.md  data-model.md  migration-plan.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-fairdm-setup/: CONSOLIDATION_PLAN.md  data-model.md  plan.md  quickstart.md  spec.md  (+1 more)
tests/: conftest.py  settings.py  test_plugins.py  test_registry.py  test_registry_extended.py
(+1052 files in other folders)
